--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://bd_socialpet:3306/socialpet?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/socialpet?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=socialpet
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
